Fix: nav fixed to allow more links without overflowing

--- a/src/assets/styles/nav.scss
+++ b/src/assets/styles/nav.scss
@@ -2,18 +2,33 @@
   $c: &;
   display: grid;
   grid-template-columns: var(--twelve-column-grid);
-  grid-template-rows: var(--nav-height) 1fr 140px;
   height: auto;
   background: var(--main-background-color);
   color: var(--main-text-color);
-  position: absolute;
-  width: 100vw;
-  height: 60px;
+  width: 100%;
   z-index: 50;
-  --nav-padding: 8px;
-  &__placeholder {
-    height: var(--nav-height);
+
+  &__contents{
+    max-height:100vh;
+    overflow:hidden;
+    grid-column:2 / 14;
+    display:grid;
+    grid-template-columns:1fr;
+    grid-template-rows:auto 1fr auto;   
   }
+
+  &__contents--top{
+    display:grid;
+    grid-template-rows:0fr;   
+    grid-row:3/4;
+  }
+
+  &__logo-block{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+  }
+
   &__skip-to-content-link {
     .c-button-temp {
       left: 45%;
@@ -26,7 +41,7 @@
       }
     }
   }
-  &__logo-link {
+  &__logo-link {    
     grid-column: 2 / -3;
     text-decoration: none;
     font-family: var(--logo-font), Lato, sans-serif;
@@ -51,24 +66,50 @@
 
   &__social-icons,
   &__navlist {
-    visibility: hidden;
     opacity: 0;
   }
 
-  &__social-icons {
-    grid-column: 2 / 14;
-    justify-self: center;
-    display: block;
+  &__social-icons--overflow{
+    overflow:hidden;
   }
 
-  &__navlist {
-    display: flex;
-    list-style-type: none;
-    padding: 0;
-    grid-row: 2 / 3;
-    grid-column: 2 / -2;
+  &__social-icons {
+    grid-column: 2 / 14;   
     justify-self: center;
-    align-self: center;
+    display: block;
+    padding-bottom:6rem;
+  }
+
+  &__navlist--wrapper{
+    overflow:hidden;
+    max-height:100%;    
+    grid-row: 2 / 3;    
+    
+    &-desktop{
+      display:none;
+    }
+    
+    &-mobile{
+      grid-template-rows:0fr;
+      transition:grid-template-rows 0.5s;
+      display:grid;
+    }
+  }
+
+  &__navlist--overflow{
+    display: flex;
+    align-items: center;
+    overflow:hidden;
+  }
+
+  &__navlist {  
+    max-height:100%;
+    overflow-y:scroll;
+    padding:3rem 0;  
+    margin:50% auto;
+    width:100%;
+    display: flex;
+    list-style-type: none;   
     flex-direction: column;
     align-items: center;
     gap: 3rem;
@@ -146,43 +187,27 @@
         background-color: var(--main-text-color);
       }
     }
-  }
-
-  @keyframes openMobileMenu {
-    from {
-      height: 6svh;
-    }
-    to {
-      height: 100svh;
-    }
-  }
-
-  @keyframes closeMobileMenu {
-    from {
-      height: 100svh;
-    }
-    to {
-      height: 6svh;
-    }
-  }
+  }  
 
   &--close {
-    animation-name: closeMobileMenu;
-    animation-duration: 0.5s;
-    #{$c}__navlist,
-    #{$c}__social-icons {
-      transition: visibility 0.2s, opacity 0.2s ease-in;
+    #{$c}__navlist--wrapper-mobile{
+      grid-template-rows:0fr;
+      #{$c}__navlist,
+      #{$c}__social-icons {
+        transition: opacity 0.1s ease-in;
+      }
     }
   }
-  &--open {
-    height: 100svh;
-    animation-name: openMobileMenu;
-    animation-duration: 0.5s;
-
+  &--open {  
+    #{$c}__contents--top{
+      grid-template-rows:1fr;
+    }  
+    #{$c}__navlist--wrapper-mobile{
+      grid-template-rows:1fr;      
+    }
     #{$c}__navlist,
     #{$c}__social-icons {
-      transition: visibility 1s, opacity 1s ease-out;
-      visibility: visible;
+      transition: opacity 1s ease-out 0.2s;
       opacity: 1;
     }
 
@@ -203,27 +228,27 @@
         background-color: transparent;
       }
     }
-
-    #{$c}__social-icons {
-      display: block;
-    }
-
-    #{$c}__navlist {
-      display: flex;
-    }
   }
 
-  @media screen and (min-width: 768px) {
-    height: auto;
-    grid-template-rows: var(--nav-height) var(--nav-height) auto;
-    &__placeholder {
-      height: calc(2 * var(--nav-height));
+  @media screen and (min-width: 769px) {
+    &__contents{
+      grid-template-columns:2fr 3fr;
+      grid-template-rows: auto auto;
+    }
+    &__contents--top{
+      grid-row:1/2;
+      grid-column:2/3;
+      justify-content: flex-end;
+      display:flex;
     }
     &__social-icons {
-      display: block;
-      justify-self: flex-end;
-      align-self: center;
-      grid-row: 1 / 2;
+      padding:0.5rem 0;
+      display: flex;
+      justify-content: flex-end;        
+    }
+
+    &__logo-block{
+      grid-row:2/3;
     }
 
     &__logo-link {
@@ -231,15 +256,29 @@
       grid-column: 2 / 5;
     }
 
-    &__navlist {
-      display: block;
-      grid-row: 2 / 3;
-      grid-column: 5 / -2;
-      height: auto;
-      display: flex;
-      justify-self: end;
+    &__navlist--wrapper{
+      transition:none;
+      grid-template-rows:1fr;
+      grid-column:2/3;
+      display:grid;
+      &-mobile{
+        display:none;
+      }
+    }
+
+    &__navlist--overflow{
+      justify-content:flex-end;
+    }
+
+    &__navlist {      
+      margin:0;
+      display: flex;      
       flex-direction: row;
-      gap: 0.5rem;
+      gap:0.5rem;
+      padding:0.5rem 0;
+      max-width: 60%;
+      flex-wrap: wrap;
+      justify-content: flex-end;
     }
 
     &__burger-menu {
@@ -247,8 +286,8 @@
     }
     &__social-icons,
     &__navlist {
-      visibility: visible;
+      transition:none;
       opacity: 1;
-    }
+    }    
   }
 }
